<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="Sort Options"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/relevance"
                android:title="@string/relevance" />
            <item
                android:id="@+id/popularity"
                android:title="@string/popularity" />
            <item
                android:id="@+id/recent"
                android:title="@string/recently_uploaded" />
        </menu>

    </item>

</menu>