<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp">


    <ImageView
        android:id="@+id/news_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:contentDescription="@string/news_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="15dp" />


    <TextView
        android:id="@+id/news_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_bold"
        android:maxLines="4"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:constraint_referenced_ids="guideline"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/source"
        tools:targetApi="p"
        tools:text="Jack Dorsey’s Block is working to make Bitcoin mining easier" />

    <TextView
        android:id="@+id/source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_medium"
        android:maxLines="1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/news_title"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/news_image"
        tools:text="TechCrunch.com" />

    <TextView
        android:id="@+id/time_published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_condensed_light"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/news_title"
        tools:text="5 hours ago" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/save_article_heart_animation"
        android:layout_width="125dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/button_to_save_news_article_locally"
        android:padding="10dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/news_title"
        app:lottie_autoPlay="false"
        app:lottie_rawRes="@raw/heart_beat_pop_up" />

    <ImageView
        android:id="@+id/save_article_heart_image"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:layout_gravity="start"
        android:contentDescription="@string/button_to_delete_news_article"
        android:paddingTop="15dp"
        android:src="@drawable/heart_blank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/news_title" />

    <ImageView
        android:id="@+id/delete_article_image"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_gravity="start"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/button_to_delete_news_article"

        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintTop_toBottomOf="@id/news_title"
        tools:layout_editor_absoluteY="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>


